// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorMessage should be able to render custom props on the container level 1`] = `
<DocumentFragment>
  <div
    bar="foo-bar"
    class="error-message-container"
    foo="bar"
  />
</DocumentFragment>
`;

exports[`ErrorMessage should render an error message when there is an error 1`] = `
<DocumentFragment>
  <div
    class="error-message-container error"
  >
    <h3
      data-test="error"
    >
      <button
        class="error-button"
        data-test="error-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark "
          data-icon="xmark"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            fill="currentColor"
          />
        </svg>
      </button>
      Error Message
    </h3>
  </div>
</DocumentFragment>
`;

exports[`ErrorMessage should render no error message when there is not error 1`] = `
<DocumentFragment>
  <div
    class="error-message-container"
  />
</DocumentFragment>
`;
